example/gcp/gcp-credentials-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  template:
    spec:
      containers:
      - name: thanos-sidecar
        volumeMounts:
        - name: thanos-storage
          mountPath: /etc/secrets/service-account/credentials.json
          subPath: credentials.json
      volumes:
      - name: thanos-storage
        secret:
          secretName: thanos-storage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-compact
spec:
  template:
    metadata:
      name: thanos-compact
    spec:
      containers:
      - name: thanos-compact
        volumeMounts:
        - name: thanos-storage
          mountPath: /etc/secrets/service-account/credentials.json
          subPath: credentials.json
      volumes:
      - name: thanos-storage
        secret:
          secretName: thanos-storage
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: thanos-store
  labels:
    app: thanos-store
spec:
  template:
    spec:
      containers:
      - name: thanos-store
        volumeMounts:
        - name: thanos-storage
          mountPath: /etc/secrets/service-account/credentials.json
          subPath: credentials.json
      volumes:
      - name: thanos-storage
        secret:
          secretName: thanos-storage
