example/gcp/thanos-rule.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-rule
spec:
  template:
    spec:
      containers:
      - name: thanos-rule
