example/gcp/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
    - host: prometheus.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: prometheus
              servicePort: 9090
